--- a/trial_source/src/main/resources/templates/attendance/detail.html
+++ b/trial_source/src/main/resources/templates/attendance/detail.html
@@ -31,7 +31,7 @@
 	<script type="text/javascript" th:inline="javascript">
 		const notEnteredDay = /*[[${notEnteredDay}]]*/ false;
 		if (notEnteredDay) {
-			alert('過去日の勤怠に未入力があります。');
+			alert("過去日の勤怠に未入力があります。");
 		}
 	</script>
 
